fixed the spacing between the items inside the form

--- a/booking/bookingpage.css
+++ b/booking/bookingpage.css
@@ -87,7 +87,8 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   display: flex;
-  gap: 50px;
+  column-gap: 90px; /* gap between the 2 sections */
+  row-gap: 0px;
   flex-wrap: wrap;
   max-width: 1100px;
 }
@@ -96,8 +97,8 @@ body {
   flex: 1;
   min-width: 400px;
   justify-content: center;
-  margin-right: 20px;
 }
+
 
 .form-section h2 {
   margin-bottom: 15px;
@@ -205,6 +206,19 @@ select {
 
 /* media queries*/
 
+@media (min-width: 1100px){  
+  .form-section.flight-section{
+    padding-left: 50px; /* left side space of the flight section */
+  }
+  .form-submit{
+  padding-left: 40px;     /* srch button space */
+  padding-bottom: 35px;
+  }
+  .form-card{
+    padding-top: 55px; /* space on the top side of the form */
+  }
+}
+
    @media (max-width: 1100px) {
   .form-card {
     flex-direction: column;
@@ -222,7 +236,7 @@ select {
 
   .form-submit {
     order: 3;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     display: flex;
     justify-content: center;
   }
@@ -311,6 +325,14 @@ select {
     padding: 0.5rem;
     margin: 0 auto;
     box-sizing: border-box;
+  }
+
+  .form-card{
+    padding-top: 10px; /* space on the top side of the form */
+  }
+
+  .form-section.flight-section{
+    padding-top: 20px;
   }
 
   .booking-form input,
